--- a/latex/cd_report.tex
+++ b/latex/cd_report.tex
@@ -87,18 +87,12 @@ Web-based Foosball Scene Design}
 \hspace{32mm}\makebox[5cm][s]
 {指導教授：\quad 嚴\quad 家\quad 銘\quad 老\quad 師}\\[6pt]
 \hspace{32mm}\makebox[5cm][s]
-{班\qquad 級：\quad 四\quad 設\quad 二\quad 甲}\\[6pt]
+{班\qquad 級：\quad 四\quad 設\quad 二\quad 乙}\\[6pt]
 \hspace{32mm}\makebox[5cm][s]
-{學\qquad 生：\quad 第\quad 一\quad 位\quad(41023191)}
+{學\qquad 生：\quad 楊\quad 舒\quad 涵\quad(41023207)}
 \\[6pt]
 \hspace{32mm}\makebox[5cm][s]
-{\hspace{36.5mm}第\quad 二\quad 位\quad(41023192)}\\[6pt]
-\hspace{32mm}\makebox[5cm][s]
-{\hspace{36.5mm}第\quad 三\quad 位\quad(41023193)}\\[6pt]
-\hspace{32mm}\makebox[5cm][s]
-{\hspace{36.5mm}第\quad 四\quad 位\quad(41023194)}\\[6pt]
-\hspace{32mm}\makebox[5cm][s]
-{\hspace{36.5mm}第\quad 五\quad 位\quad(41023195)}\\[6pt]
+{\hspace{36.5mm}廖\quad 子\quad 儀\quad(4102308)}\\[6pt]
 %設定文字盒子[寬度為5cm][對其方式為文字平均分分布於方框中]空白距離{36.5mm}\空白1em
 \end{LARGE}
 \end{flushleft}
@@ -117,7 +111,7 @@ Web-based Foosball Scene Design}
      \end{center}}
     {\begin{textblock}{60}(1.85,0.8)
     \noindent \fontsize{15pt}{16pt}\selectfont 分組報告製作修習學生\enspace:\quad
-    {\begin{minipage}[t]{10em}\underline{四設二甲\enspace 41023191 第一位}\\ \underline{四設二甲\enspace 41023192\enspace 第二位}\\ \underline{四設二甲\enspace 41023193\enspace 第三位}\\ \underline{四設二甲\enspace 41023194\enspace 第四位}\\ \underline{四設二甲\enspace 41023195\enspace 第五位}\\ %下劃線符號指令
+    {\begin{minipage}[t]{10em}\underline{四設二乙\enspace 41023207 楊舒涵}\\ \underline{四設二乙\enspace 41023208\enspace 廖子儀}\\ %下劃線符號指令
     \end{minipage}}
          \par} %結束指定行距
     {\renewcommand\baselinestretch{1.2}\selectfont %設定以下行距
